{
  "sourceLanguage" : "en",
  "strings" : {
    "back" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "戻る"
          }
        }
      }
    },
    "cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
          }
        }
      }
    },
    "decision" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Decision"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "決定"
          }
        }
      }
    },
    "good_morning" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Good morning"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "おはようございます"
          }
        }
      }
    },
    "good_night" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Good night"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "おやすみなさい"
          }
        }
      }
    },
    "hello" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hello"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "こんにちは"
          }
        }
      }
    },
    "Hello, world!" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hello, world!"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "こんにちは、世界！"
          }
        }
      }
    },
    "multilingual" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Multilingual"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "多言語"
          }
        }
      }
    },
    "test" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Test"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "テスト"
          }
        }
      }
    }
  },
  "version" : "1.0"
}